# minml

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/minml/: __init__.py  function.py  schema.py  strings.py  types.py  util.py
src/minml/prompt/: base.py  cot.py  grep.py  qa.py  summ.py
tests/: test_match.py  test_types.py  test_types_static.py
