[project]
name = "minml"
version = "0.0.3"
authors = [
    { name="Hudson Cooper", email="hncooper96@gmail.com" },
]
description = "Remove the yammering from LLM outputs."
dependencies = [
  "pyparsing",
  "pydantic",
  "guidance@git+https://github.com/guidance-ai/guidance#992728",
]

[project.optional-dependencies]
develop = [
  "pytest",
  "build",
  "gpts",
]

[project.urls]
source = "https://github.com/hudson-ai/minml/"
download = "https://pypi.org/project/minml/#files"
